<resources>
    <string name="app_name">Burn Calories</string>
    <string name="title_settings">Settings</string>
    <string name="cal">Cal</string>
    <string name="running_distance">Running Distance</string>
    <string name="cal_intake">Calories Intake</string>

    <string name="title_intake">Intake</string>
    <string name="title_status">Status</string>
    <string name="exercise_data">Exercise Data</string>
    <string name="body_data">Body Data</string>
    <string name="weight">Weight</string>
    <string name="plan">Plan</string>
    <string name="plan_step">Plan Step</string>
    <string name="plan_distance">Run Distance</string>
    <string name="plan_intake">Intake</string>
    <string name="step">Step</string>
    <string name="title_4">Great!</string>
    <string name="height">Height</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>

</resources>
