<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetPlanActivity">
    <ImageView
        android:id="@+id/cal_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="100dp"
        android:src="@drawable/fire"
        android:layout_marginTop="20dp"
        android:layout_width="45dp"
        android:layout_height="45dp"/>
    <EditText
        android:id="@+id/cal"
        app:layout_constraintTop_toTopOf="@id/cal_image"
        app:layout_constraintLeft_toRightOf="@id/cal_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:hint="@string/plan_intake"
        android:textSize="20dp"
        android:inputType="number"
        android:textColor="#000"/>
    <ImageView
        android:id="@+id/run_image"
        app:layout_constraintTop_toBottomOf="@id/cal_image"
        app:layout_constraintLeft_toLeftOf="@id/cal_image"
        android:layout_marginTop="20dp"
        android:src="@drawable/run"
        android:layout_width="45dp"
        android:layout_height="45dp"/>
    <EditText
        android:id="@+id/run"
        app:layout_constraintTop_toTopOf="@id/run_image"
        app:layout_constraintLeft_toRightOf="@id/run_image"
        android:layout_marginLeft="30dp"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/plan_distance"
        android:textSize="20dp"
        android:textColor="#000"/>

    <ImageView
        android:id="@+id/step_image"
        app:layout_constraintTop_toBottomOf="@id/run_image"
        app:layout_constraintLeft_toLeftOf="@id/run_image"
        android:layout_marginTop="20dp"
        android:src="@drawable/footprint"
        android:layout_width="45dp"
        android:layout_height="45dp"/>
    <EditText
        android:id="@+id/step"
        app:layout_constraintTop_toTopOf="@id/step_image"
        app:layout_constraintLeft_toRightOf="@id/step_image"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/plan_step"
        android:textSize="20dp"
        android:textColor="#000"/>

    <ImageView
        android:id="@+id/save"
        app:layout_constraintTop_toBottomOf="@id/step_image"
        app:layout_constraintLeft_toRightOf="@id/step_image"
        android:clickable="true"
        android:src="@drawable/yes"
        android:layout_marginTop="50dp"
        android:layout_width="80dp"
        android:layout_height="80dp"/>


</android.support.constraint.ConstraintLayout>