<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetBodyDataActivity">
    <ImageView
        android:id="@+id/height_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="100dp"
        android:src="@drawable/height"
        android:layout_marginTop="20dp"
        android:layout_width="45dp"
        android:layout_height="45dp"/>
    <EditText
        android:id="@+id/height"
        app:layout_constraintTop_toTopOf="@id/height_image"
        app:layout_constraintLeft_toRightOf="@id/height_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:hint="@string/height"
        android:textSize="20dp"
        android:inputType="number"
        android:textColor="#000"/>
    <TextView
        app:layout_constraintLeft_toRightOf="@id/height"
        app:layout_constraintTop_toTopOf="@id/height"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="20dp"
        android:text=" cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/weight_image"
        app:layout_constraintTop_toBottomOf="@id/height_image"
        app:layout_constraintLeft_toLeftOf="@id/height_image"
        android:layout_marginTop="20dp"
        android:src="@drawable/weight"
        android:layout_width="45dp"
        android:layout_height="45dp"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:hint="@string/weight"
        android:inputType="number"
        android:textColor="#000"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/weight_image"
        app:layout_constraintTop_toTopOf="@id/weight_image" />
    <TextView
        app:layout_constraintLeft_toRightOf="@id/weight"
        app:layout_constraintTop_toTopOf="@id/weight"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="20dp"
        android:text=" kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/bmi_image"
        app:layout_constraintTop_toBottomOf="@id/weight_image"
        app:layout_constraintLeft_toLeftOf="@id/weight_image"
        android:layout_marginTop="20dp"
        android:src="@drawable/bmi"
        android:layout_width="45dp"
        android:layout_height="45dp"/>
    <TextView
        android:id="@+id/bmi_text"
        app:layout_constraintTop_toTopOf="@id/bmi_image"
        app:layout_constraintLeft_toRightOf="@id/bmi_image"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/plan_step"
        android:textSize="20dp"
        android:text="BMI"
        android:textColor="#000"/>
    <TextView
        android:id="@+id/bmi"
        app:layout_constraintTop_toTopOf="@id/bmi_image"
        app:layout_constraintLeft_toRightOf="@id/bmi_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000"/>
    <ImageView
        android:id="@+id/save"
        app:layout_constraintTop_toBottomOf="@id/bmi_image"
        app:layout_constraintLeft_toRightOf="@id/bmi_image"
        android:clickable="true"
        android:src="@drawable/yes"
        android:layout_marginTop="50dp"
        android:layout_width="80dp"
        android:layout_height="80dp"/>


</android.support.constraint.ConstraintLayout>