<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/title_background" >

                <ToggleButton
                    android:id="@+id/locationbtn"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:descendantFocusability="beforeDescendants"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:textOn="Pause"
                    android:textOff="Start">
                </ToggleButton>

                <Button
                    android:id="@+id/button_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="保存"
                    android:layout_marginLeft="100dp"
                    android:layout_alignLeft="@+id/locationbtn"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/title_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/title_lly_right"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:descendantFocusability="beforeDescendants"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal"
                    android:paddingRight="5dp"
                    android:onClick="record">

                    <TextView
                        android:id="@+id/title_tv_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="true"
                        android:textSize="18dp"
                        android:text="record" />
                </LinearLayout>
            </RelativeLayout>

            <com.amap.api.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

            </com.amap.api.maps.MapView>

            <TextView
                app:layout_constraintBottom_toBottomOf="@id/map"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="100dp"
                android:id="@+id/show_all_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="总距离："
                android:textStyle="bold"
                android:visibility="invisible"
                android:layout_below="@+id/title"/>
            <android.support.v7.widget.CardView
                android:id="@+id/running_card"
                app:layout_constraintLeft_toLeftOf="@id/map"
                app:layout_constraintTop_toBottomOf="@id/map"
                app:cardCornerRadius="5dp"
                android:layout_width="350dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="50dp"
                android:elevation="10dp"
                android:layout_height="150dp">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textDistance"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textSize="18dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="30dp"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/distance"
                        app:layout_constraintLeft_toRightOf="@id/textDistance"
                        app:layout_constraintTop_toTopOf="@id/textDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2.3 km"
                        android:textSize="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="1dp"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/textTime"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="18dp"
                        android:layout_marginRight="130dp"
                        android:textColor="#000"/>
                    <Chronometer
                        android:id="@+id/time"
                        app:layout_constraintLeft_toRightOf="@id/textTime"
                        app:layout_constraintTop_toTopOf="@id/textTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="1dp"
                        android:textColor="#000"/>

                    <TextView
                        android:id="@+id/textSpeed"
                        app:layout_constraintLeft_toLeftOf="@id/textDistance"
                        app:layout_constraintTop_toBottomOf="@id/textDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textSize="18dp"
                        android:layout_marginTop="30dp"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/speed"
                        app:layout_constraintLeft_toRightOf="@id/textSpeed"
                        app:layout_constraintTop_toTopOf="@id/textSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.08 m/s"
                        android:textSize="18dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="1dp"
                        android:textColor="#000"/>
                    <ImageView
                        android:src="@drawable/fire"
                        android:id="@+id/imgCal"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textSpeed"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:textSize="18dp"
                        android:layout_marginRight="145dp"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/cal"
                        app:layout_constraintLeft_toRightOf="@id/imgCal"
                        app:layout_constraintTop_toTopOf="@id/imgCal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="999 cal"
                        android:textSize="18dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="1dp"
                        android:textColor="#000"/>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
            <View
                app:layout_constraintTop_toBottomOf="@id/running_card"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:visibility="visible"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>





